Fix checkout success + sort menu overflow

--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -115,6 +115,10 @@ hr {
     padding: 20px;
 }
 
+.order-number {
+    font-size: 1.2rem;
+}
+
 @media (max-width: 576px) {
     .responsive-btn {
         font-size: 0.6rem;
